--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -39,12 +39,25 @@ $(document).ready(function() {
     <% end %>
   </div>
   <div class="section" id="section1" style="background-color: pink;">
-    <div class="slide">
-      meupe1
+    <div class="slide" style="padding-top: 30px;">
+      <header>
+        <h1>Mapa de laboratório</h1>  
+      </header>
+      <section>
+        <div class="container-wrapper">
+          <div class="containerPC">
+            <div class="pc-wrapper">
+              <div class="pc"> PC 1<br>Em uso</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 2<br>Livre</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 3<br>Manutenção</div>
+            </div>
+          </div>
+        </div>     
+      </section>
     </div>
-    <div class="slide">
-      meupe2
-    </div>
-
   </div>
 </div>
