--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -1,45 +1,65 @@
 <script>
 $(document).ready(function() {
-  $('#fullpage').fullpage();
+  $('#fullpage').fullpage({
+    normalScrollElements: '#horario',
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true,
+    loopBottom: true
+  });
 });
 </script>
 
+<% time = Time.now %>
+<% timeLab = @status.created_at + 360 #360seg = 5min%>
+
 <div id="fullpage">
-  <div class="section active" id="section0" style="background-image: url('/assets/lso_wosignal.jpg');">
-    <div class="container-fluid" style="padding-top: 30px;">
-      <%= time = Time.now %>
-      <%= timeLab = @status.created_at + 360%>
-      <% if timeLab < time %>
-        <h1>Não estamos recebendo sinal do dispositivo. :(</h1>
-      <% else %>
-        <% if @status.isOpen %>
-          <img src="/assets/lso_open.jpg"></img>
-          <% a = @labs.subjects.where("begin <= ?", DateTime.current).where("end > ?", (DateTime.current.to_time + 1.hours).to_datetime ) %>
-          <% if !a.empty? && !a[0].isFreeToJoin%>
-            Nesse momento esta acontecendo <%= a[0].title %>, fique esperto pra pegar espaço no laboratório!<br>
-            <%= a[0].begin %><br>
-            <%= a[0].end %><br>
-          <% elsif a.empty? %>
-            <h1> Está aberto! Mas deveria? :s</h1>
-          <% else %>
-            <h1>Está aberto!</h1><br>
-            <%= a[0].title %><br>
-            <%= a[0].begin %><br>
-            <%= a[0].end %><br>
-            <br>
-          <% end %>
+  <div class="section active" id="section0" style="background-color: black");>
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <% if timeLab < time %>
+          <h1>Sem sinal do dispositivo. :(</h1>
         <% else %>
-          <h1>Está fechado :(</h1>
-          <img src="/assets/lso_close.jpg"></img>
+          <% if @status.isOpen %>
+            <% a = @labs.subjects.where("begin <= ?", DateTime.current).where("end > ?", (DateTime.current.to_time + 1.hours).to_datetime ) %>
+            <% if !a.empty?# && !a[0].isFreeToJoin%>
+              <h1> Acontencendo a aula <%= a[0].title %>!</h1>
+              <%= a[0].begin %><br>
+              <%= a[0].end %><br>
+            <% elsif Time.now.hour > 23 && Time.now.hour < 8%>
+              <h1> Está aberto! Mas deveria? :s</h1>
+            <% else %>
+              <h1>Está aberto! :)</h1>
+            <% end %>
+          <% else %>
+          <% end %>
+            <h1>Está fechado :(</h1>
         <% end %>
-      <% end %>
+        <div id="horario" style="overflow: auto; height: 300px">
+          <table class="table table-condensed" >
+            <tr>
+              <th>Horário</th>
+              <th>Aula</th>
+            </tr>
+            <% @subjects.each do |u| %>
+              <tr>
+                <td><%= u.begin.hour %>:00</td>
+                <td><%= u.title %></td>
+              </tr>
+            <% end %>
+          </table>
+        </div>
+      </div>
     </div>
-    <% @subjects.each do |u| %>
-      <%= u.begin.hour %>:00 to <%= u.end.hour %>:00 <%= u.title %><br>
-    <% end %>
   </div>
   <div class="section" id="section1" style="background-color: pink;">
-    <div class="slide" style="padding-top: 30px;">
+    <div class="slide">
       <header>
         <h1>Mapa de laboratório</h1>  
       </header>
