--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -55,6 +55,82 @@ $(document).ready(function() {
             <div class="pc-wrapper">
               <div class="pc"> PC 3<br>Manutenção</div>
             </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 4<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 5<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 6<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 7<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 8<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 9<br>Manutenção</div>
+            </div>
+          </div>
+          <div class="containerPC">
+            <div class="pc-wrapper">
+              <div class="pc"> PC 10<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 11<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 12<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 13<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 14<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 15<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 16<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 17<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 18<br>Manutenção</div>
+            </div>
+          </div>
+          <div class="containerPC">
+            <div class="pc-wrapper">
+              <div class="pc"> PC 19<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 20<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 21<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 22<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 23<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 24<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 25<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 26<br>Manutenção</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="pc"> PC 27<br>Manutenção</div>
+            </div>
           </div>
         </div>     
       </section>
