--- a/app/views/laboratory/show.html.erb
+++ b/app/views/laboratory/show.html.erb
@@ -55,95 +55,91 @@ $(document).ready(function() {
         <h1>Mapa de laboratório</h1>
       </header>
       <section>
-        <div class="container-wrapper">
-          <div class="containerPC">
+        <div class="container-fluid">
+          <div class="jumbotron">
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 1).last_status%>">PC 1<br>Em uso</div>
+              <div class="<%= @computers.find_by(:physical_id=> 1).last_status%>">PC 1</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 2).last_status%>">PC 2<br>Livre</div>
+              <div class="<%= @computers.find_by(:physical_id=> 2).last_status%>">PC 2</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 3).last_status%>">PC 3<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 3).last_status%>">PC 3</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 4).last_status%>">PC 4<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 4).last_status%>">PC 4</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 5).last_status%>">PC 5<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 5).last_status%>">PC 5</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 6).last_status%>">PC 6<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 6).last_status%>">PC 6</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 7).last_status%>">PC 7<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 7).last_status%>">PC 7</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 8).last_status%>">PC 8<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 8).last_status%>">PC 8</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 9).last_status%>">PC 9<br>Manutenção</div>
-            </div>
-          </div>
-          <div class="containerPC">
-            <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 10).last_status%>">PC 10<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 9).last_status%>">PC 9</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 11).last_status%>">PC 11<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 10).last_status%>">PC 10</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 12).last_status%>">PC 12<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 11).last_status%>">PC 11</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 13).last_status%>">PC 13<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 12).last_status%>">PC 12</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 14).last_status%>">PC 14<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 13).last_status%>">PC 13</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 15).last_status%>">PC 15<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 14).last_status%>">PC 14</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 16).last_status%>">PC 16<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 15).last_status%>">PC 15</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 17).last_status%>">PC 17<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 16).last_status%>">PC 16</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 18).last_status%>">PC 18<br>Manutenção</div>
-            </div>
-          </div>
-          <div class="containerPC">
-            <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 19).last_status%>">PC 19<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 17).last_status%>">PC 17</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 20).last_status%>">PC 20<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 18).last_status%>">PC 18</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 21).last_status%>">PC 21<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 19).last_status%>">PC 19</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 22).last_status%>">PC 22<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 20).last_status%>">PC 20</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 23).last_status%>">PC 23<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 21).last_status%>">PC 21</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 24).last_status%>">PC 24<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 22).last_status%>">PC 22</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 25).last_status%>">PC 25<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 23).last_status%>">PC 23</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 26).last_status%>">PC 26<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 24).last_status%>">PC 24</div>
             </div>
             <div class="pc-wrapper">
-              <div class="<%= @computers.find_by(:physical_id=> 27).last_status%>">PC 27<br>Manutenção</div>
+              <div class="<%= @computers.find_by(:physical_id=> 25).last_status%>">PC 25</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="<%= @computers.find_by(:physical_id=> 26).last_status%>">PC 26</div>
+            </div>
+            <div class="pc-wrapper">
+              <div class="<%= @computers.find_by(:physical_id=> 27).last_status%>">PC 27</div>
             </div>
           </div>
-        </div>     
+        </div>
       </section>
     </div>
   </div>
